2002-05-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Added --enable-ccmalloc configure option.

2002-05-09  Cristy  <cristy@mystic.es.dupont.com>
  * DCM patch provided by Shane Blackett.

2002-05-07  Cristy  <cristy@mystic.es.dupont.com>
  * Lock mutex when destorying a SemaphoreInfo structure (patch provided
    by William Radcliffe).
  * Added mingw patches provided by Derry Bryson.

2002-05-05  Cristy  <cristy@mystic.es.dupont.com>
  * ImageMagick, version 5.4.5-1 released.

2002-04-30  Cristy  <cristy@mystic.es.dupont.com>
  * Subimage specification did not work for TIFF (e.g.
    convert 'image.tiff[1]' image.png).

2002-04-30  Cristy  <cristy@mystic.es.dupont.com>
  * ImageMagick, version 5.4.5 released.

2002-04-20  Cristy  <cristy@mystic.es.dupont.com>
  * Added magic string detection for the FPX format (patch provided by
    Marc).

2002-04-18  Cristy  <cristy@mystic.es.dupont.com>
  * Added ExceptionInfo parameter to C API method, QueryColorDatabase().

2002-04-17  Leonard Rosenthol  <leonardr@lazerware.com>
  * Fixed all known bugs with the IMDisplay utility for Windows.

2002-04-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * configure.ac (libtool_build_static_libs): Added
    --enable-delegate-build option to suuport building ImageMagick
    using delegate libraries in subdirectories of the ImageMagick source
    directory.

2002-04-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * WMF now supplies bitmaps as inline images rather than via a mpri
    reference.

2002-04-15  Cristy  <cristy@mystic.es.dupont.com>
  * Fixed DrawImage() to properly handle affine image transforms.
  * Added AffineTransformImage() to C API.
  * Added -transform option to convert/mogrify program.

2002-04-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * magick/magick.c (MagickToMime): New method to return the MIME media
    type corresponding to a specified magick tag.

2002-04-12  Leonard Rosenthol  <leonardr@lazerware.com>